--- a/src/Search/Search.scss
+++ b/src/Search/Search.scss
@@ -10,7 +10,7 @@
   border-radius: 8px;
   border: none;
   background-color: #f4f4f4;
-  font-size: clamp(14px, 1.5vmax, 18px);
+  font-size: clamp(14px, 1.7vmax, 18px);
   color: #57585e;
 
   &:focus {
