--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -152,6 +152,24 @@ body {
   html {
     font-size: clamp(13px, 1.7vmax, 18px);
   }
+
+  .theme-label {
+    width: 45px;
+    height: 22.5px;
+
+    &::after {
+      width: 18px;
+      height: 18px;
+    }
+  }
+
+  .search {
+    font-size: 1.2rem;
+  }
+
+  .right-col {
+    line-height: 1;
+  }
 }
 
 @media screen and (min-width: 601px) and (max-width: 980px) {
